corrected the spacings

--- a/portfolio/stylesheet/education.scss
+++ b/portfolio/stylesheet/education.scss
@@ -25,7 +25,7 @@ $radius: 40px;
     }
 
     div{
-        justify-content: end;
+        justify-content: space-between;
 
     }
 }
